# groq-terminal-ai

./: .gitignore  README.md  pyproject.toml  setup.py
cli_ai/: cli.py  config.py  models.py  utils.py
groq_terminal_ai/: cli.py  command_generator.py  config.py  models.py  utils.py
terminal_ai/: cli.py  command_generator.py  utils.py
