[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "groq-terminal-ai"
version = "1.0.0"
readme = "README.md"
description = "groq-terminal-ai is a command line tool that uses AI to generate terminal commands"
dependencies = [
    "pyautogui",
    "groq",
]

[project.scripts]
ai = "groq_terminal_ai.cli:main"

[tool.setuptools]
packages = ["groq_terminal_ai"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}